--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,21 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>H&D Bot Home</title>
+  <head> <title>H&D Bot Home</title> <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+    crossorigin="anonymous">
   </head>
   <body>
-    <h1>Welcome {{ name }}!</h1>
-    <p>This site is still a W.I.P</p>
+    <div class="navigationBar">
+      
+    </div>
+    <div class="mainTitle">
+      <h1>Welcome {{ name }}!</h1>
+    </div>
+    <div class="container">
+      <p>This site is still a W.I.P</p>
+    </div>
   </body>
 </html>
