Updated more stuff

--- a/static/styles/base.less
+++ b/static/styles/base.less
@@ -35,3 +35,13 @@ html {
     margin-left: 50px;
   }
 }
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+
+    a {
+      font-size: 18px;
+    }
+  }
+}
