--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,11 @@
   <body>
 
     <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <ol>
+        <p>Home</p>
+        <p><a href="/logout">Logout</a></p>
+      </ol>
     </div>
 
     <button type="button" onclick="openNav()">Test</button>
