Add Navigation bar to HTML to

--- a/static/styles/base.less
+++ b/static/styles/base.less
@@ -9,12 +9,12 @@ html {
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  background-color: #111; /* Black*/
+  background-color: #1d413a;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 60px; /* Place content 60px from the top */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 
-  a {
+  p {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
@@ -22,7 +22,7 @@ html {
     display: block;
     transition: 0.3s;
 
-    &:hover {
+    a:hover {
       color: #f1f1f1;
     }
   }
@@ -40,7 +40,7 @@ html {
   .sidenav {
     padding-top: 15px;
 
-    a {
+    p {
       font-size: 18px;
     }
   }
