--- a/templates/logout.html
+++ b/templates/logout.html
@@ -6,15 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet/less" type="text/css" href="/static/styles/base.less" />
+    <script src="/static/js/nav.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/less" ></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <div class="navigationBar">
-      
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <ol>
+        <p>Home</p>
+        <p><a href="/logout">Logout</a></p>
+      </ol>
     </div>
+
+    <button type="button" onclick="openNav()">Test</button>
+    <div class="navigationBar">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <div class="mainTitle">
       <h1>You're logged out!</h1>
     </div>
