--- a/templates/logout.html
+++ b/templates/logout.html
@@ -16,8 +16,8 @@
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <ol>
-        <p>Home</p>
-        <p><a href="/logout">Logout</a></p>
+        <p><a href="/">Home</a></p>
+        <p>Logout</p>
       </ol>
     </div>
 
