--- a/static/styles/base.less
+++ b/static/styles/base.less
@@ -16,14 +16,17 @@ html {
 
   p {
     padding: 8px 8px 8px 32px;
-    text-decoration: none;
     font-size: 25px;
     color: #818181;
     display: block;
     transition: 0.3s;
 
-    a:hover {
-      color: #f1f1f1;
+    a {
+      text-decoration: none;
+
+      &:hover {
+        color: #f1f1f1;
+      }
     }
   }
 
